--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.tshopText {
+  font-family: 'Potta One', cursive;
+  font-size: 36px;
+  font-weight: bold;
+  margin-left: 5px;
+  color: red;
+  margin-top: 10px;
+}
